// Copyright (c) 2025 Alibaba Group Holding Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package api.message.v1;

option go_package = "kratos-demo/api/message/v1;v1";

import "google/api/annotations.proto";

service MessageService {
  rpc GetWeatherMessage (GetWeatherMessageRequest) returns (WeatherMessage){
    option (google.api.http) = {
      get: "/v1/message/weather/{city}"
    };
  }
}

message GetWeatherMessageRequest {
  string city = 1;
}

message WeatherMessage {
  string content = 1;
}
